--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "quasar": "^2.0.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-mask": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
